--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
 <body class="white-overlay">
     <div class="preloader" id="pageLoad">
-        <div class="holder">
-            <div class="<div class="loader"></div>"></div>
-        </div>
+        <div class="loader"></div>
     </div>
     
     <!--Side panel-->
