--- a/contact-us.html
+++ b/contact-us.html
@@ -28,10 +28,8 @@
 </head>
 
 <body class="white-overlay">
-    <div class="preloader" id="pageLoad">
-        <div class="holder">
-            <div class="<div class="loader"></div>"></div>
-        </div>
+     <div class="preloader" id="pageLoad">
+        <div class="loader"></div>
     </div>
     
     <!--Side panel-->
