Portfolio img updated

--- a/index.html
+++ b/index.html
@@ -365,42 +365,42 @@
                         </ul>
                         <div class="row grid">
                             <div class="gallery-item col-lg-4 col-md-6 first third">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-37.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio_Listing_1.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
                                 </figure>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 third second">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-32.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio_Listing_2.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
                                 </figure>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 first third">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-33.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio_Listing_3.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
                                 </figure>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 fourth second">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-34.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio_Listing_4.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
                                 </figure>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 second fourth">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-35.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio-Listing-6.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
                                 </figure>
                             </div>
                             <div class="gallery-item col-lg-4 col-md-6 fourth first">
-                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/img-36.jpg" alt="images description" />
+                                <figure class="picture-item img-block shine-effect image-zoom port-v2"> <img src="img/Portfolio-Listing-7.jpg" alt="images description" />
                                     <figcaption>
                                         <div class="link-box"> <a href="#"> <i class="fa-regular fa-heart"></i> </a> <a href="#"> <i class="fa-solid fa-link"></i> </a> </div>
                                     </figcaption>
