--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -241,13 +241,16 @@
                 <div class="content-wrapper">
                     <div class="owl-carousel single-slide portfolio-slide" id="Excursion-owl-slide-2">
                         <div class="slide-item">
-                            <img src="img/portfolio-big-01.jpg" alt="images">
+                            <img src="img/portfolio-banner-1.jpg" alt="images">
                         </div>
                         <div class="slide-item">
-                            <img src="img/portfolio-big-01.jpg" alt="images">
+                            <img src="img/portfolio-banner-2.jpg" alt="images">
                         </div>
                         <div class="slide-item">
-                            <img src="img/portfolio-big-01.jpg" alt="images">
+                            <img src="img/portfolio-banner-3.jpg" alt="images">
+                        </div>
+                        <div class="slide-item">
+                            <img src="img/portfolio-banner-4.jpg" alt="images">
                         </div>
                     </div>
                     <section class="content-block">
@@ -342,50 +345,50 @@
                                 <div class="row masonary-block default-gallery">
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-21.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 12" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-21.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-1.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 12" href="img/portfolio-details-11.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-1.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-22.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 13" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-22.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-2.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 13" href="img/portfolio-details-22.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-2.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-23.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 14" href="img/visual-small-03.jpg" rel="gallery"> </a>
-                                            <div class="image-wrapper"><img src="img/portfolio-23.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-3.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 14" href="img/portfolio-details-33.jpg" rel="gallery"> </a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-3.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-24.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 15" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-24.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-4.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 15" href="img/portfolio-details-44.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-4.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-25.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 16" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-25.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-5.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 16" href="img/portfolio-details-55.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-5.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-26.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 17" href="img/visual-small-03.jpg" rel="gallery"> </a>
-                                            <div class="image-wrapper"><img src="img/portfolio-26.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-6.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 17" href="img/portfolio-details-66.jpg" rel="gallery"> </a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-6.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-27.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 18" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-27.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-7.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 18" href="img/portfolio-details-77.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-7.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                     <div class="col-md-6 col-lg-3">
                                         <figure class="caption-hover-full">
-                                            <a data-thumbnail="img/portfolio-28.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 19" href="img/visual-small-03.jpg" rel="gallery"></a>
-                                            <div class="image-wrapper"><img src="img/portfolio-28.jpg" alt="images description"></div>
+                                            <a data-thumbnail="img/portfolio-details-8.jpg" class="fancybox-thumb fancy-pop" title="Portfolio 19" href="img/portfolio-details-88.jpg" rel="gallery"></a>
+                                            <div class="image-wrapper"><img src="img/portfolio-details-8.jpg" alt="images description"></div>
                                         </figure>
                                     </div>
                                   
